# funcshauns

./: .gitignore  README.md  note.txt  pyproject.toml  requirements.txt  test_funcshauns.ipynb  tox.ini
.github/workflows/: github-actions.yaml  poetry-actions.yaml  release.yaml  uv-actions(under renovation)  uv-actions.yaml
funcshauns/: __init__.py  funcshauns.py
info/: RELEASING.md  test_pypi_commands.sh
src/funcshauns/: __init__.py  funcshauns.py
tests/: test_scratch.py
