[project]
name = "funcshauns"
version = "0.1.1.6"
description = "My Python functions"
authors = [
    {name = "Shaun Porwal", email = "shaun.porwal@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "polars>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "tomli>=2.2.1",
    "pathlib>=1.0.1",
    "jupyterlab>=4.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["funcshauns"]

